# PerfTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  telemetry.ini
PerfCaseGUI/: CMakeLists.txt  main.cpp
PerfCaseGUI/cases/: case_alloc_stress.cpp  case_blocking_io.cpp  case_cache_miss.cpp  case_cpu_burn.cpp  case_false_sharing.cpp  case_lock_contention.cpp  case_memory_leak.cpp  case_particle_system.cpp  case_stutter_sim.cpp  case_telemetry_demo.cpp  case_thread_contention.cpp
common/: CMakeLists.txt  memory_tracker.cpp  memory_tracker.h  perf_case.h  profiler.cpp  profiler.h  telemetry.cpp  telemetry.h  tracy_integration.h
docs/: 01_内存泄漏.md  02_卡顿优化.md  03_帧率优化.md  04_性能工具指南.md  05_ImGui性能测试平台.md  06_生产Telemetry系统.md
framerate/: 01_game_loop.cpp  02_frame_pacing.cpp  03_object_pooling.cpp  CMakeLists.txt
memory_leak/: 01_basic_leak.cpp  02_smart_ptr_fix.cpp  03_circular_reference.cpp  04_win_api_leak.cpp  CMakeLists.txt
stutter/: 01_cache_miss.cpp  02_false_sharing.cpp  03_lock_contention.cpp  04_blocking_io.cpp  CMakeLists.txt
win_perf/: 01_etw_tracing.cpp  02_query_perf_counter.cpp  CMakeLists.txt
